sumo/tests/netconvert/import/XML/errors/broken_edge/edge#shape__false4d/errors.netconvert
Error: Attribute 'shape' in definition of a edge is not x,y or x,y,z.
Quitting (on error).
